# hf-dataupload-pipeline

./: .gitignore  README.md  __init__.py  pyproject.toml  uploader.py
classification_pipeline/: __init__.py  cli.py  uploader.py
multi_label_classification_pipeline/: __init__.py  __main__.py  cli.py  uploader.py
object_detection_pipeline/: __init__.py  object_detection_uploader.py
segmentation_dataset_uploader/: __init__.py  segmentation_uploader.py
