[tool.poetry]
name = "mars-dataset-uploader"
version = "0.1.0"
description = "A tool for uploading Mars image classification datasets to Hugging Face"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "mars_dataset_uploader"}]

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.16.0"
huggingface-hub = "^0.20.3"
pandas = "^2.0.0"
numpy = "^1.24.0"
tqdm = "^4.66.0"
Pillow = "^10.0.0"  # Required for image handling
mlcroissant = "^1.0.17"
requests = "^2.32.3"
gitpython = "^3.1.44"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mars-dataset-uploader = "mars_dataset_uploader.cli:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 